# docs-pipeline

./: .cursorrules  .dockerignore  .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CURSOR_RULES_OPTIMIZATION.md  DEEP_FIX_DIAGRAM_PATH_ISSUE.md  DEPLOY_DIAGRAM_FIX.md  DIAGRAM_EXCELLENCE_QUICK_REFERENCE.md  DIAGRAM_EXCELLENCE_RESEARCH_2025.md  DIAGRAM_RESEARCH_SUMMARY.md  Dockerfile  EIGHT_PRIORITIES_SUMMARY.md  FIXES_IMPLEMENTED.md  GLOSSARY_USAGE_GUIDE.md  IMPLEMENTATION_CHECKLIST_MERMAID11.md  LICENSE  MERMAID11_IMPLEMENTATION_COMPLETE.md  MERMAID11_INTEGRATION_SUMMARY.md  MERMAID_DARK_PRO_INTEGRATION.md  MERMAID_QUICKSTART.md  MODERNIZATION_PLAN.md  Makefile  NEXTGEN_FEATURES_ACTION_PLAN.md  NEXTGEN_FEATURES_AUDIT_ANSWERS.md  NEXT_STEPS_SUMMARY.md  PRIORITY_1_2_3_COMPLETE.md  PRIORITY_1_2_SUMMARY.md  PRIORITY_1_CACHE_METRICS_GUIDE.md  PRIORITY_1_IMPLEMENTATION_COMPLETE.md  PRIORITY_2_IMPLEMENTATION_COMPLETE.md  PRIORITY_3_IMPLEMENTATION_COMPLETE.md  PRIORITY_4_IMPLEMENTATION_COMPLETE.md  PRIORITY_5_IMPLEMENTATION_COMPLETE.md  PRIORITY_8_IMPLEMENTATION_COMPLETE.md  PROGRESS_SUMMARY.md  PUPPETEER_SECURITY_ANALYSIS.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  (+14 more)
.cursor/: index.mdc
.cursor/rules/: architecture.mdc  cli-workflows.mdc  codegen-patterns.mdc  cursor-rules-guide.md  design-system.mdc  docker-ops.mdc  pdf-generation.mdc  testing-standards.mdc
docs/: ALL_7_CORRECTIONS_COMPLETE.md  ARCHITECTURE_AUDIT_STYLING_DEPENDENCIES.md  BEST_PRACTICES_SUMMARY.md  CLI_MODERN_REDESIGN.md  CLI_UPGRADE_GUIDE.md  CLI_v4_COMPLETE.md  CRITICAL_DIAGNOSIS_IMPORT_ISSUE.md  CURSOR_RULES_SETUP.md  DESIGN_SYSTEM_COMPLETE.md  DESIGN_SYSTEM_STATUS.md  DIAGRAM_EXCELLENCE_INDEX.md  IMPLEMENTATION_NOTES.md  INDEX.md  MERMAID11_IMPLEMENTATION_COMPLETE.md  MERMAID11_QUICK_REFERENCE.md  MERMAID_COLOR_MAPPING_FIX.md  MERMAID_CSS_VARIABLES_VERIFICATION.md  MERMAID_DIAGRAM_FIX.md  MERMAID_IMPLEMENTATION_COMPLETE.md  MERMAID_NEXTGEN_2025.md  MERMAID_THEMES_ANALYSIS.md  MERMAID_THEME_INTEGRATION_FIX.md  MERMAID_THEMING_QUICKSTART.md  NEXTGEN_FEATURES_AUDIT.md  NEXTGEN_QUICK_SUMMARY.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_DESIGN_TOKENS_COMPLETE.md  PHASE_2_CSS_GENERATION_COMPLETE.md  PHASE_3_INTEGRATION_COMPLETE.md  PHASE_B_INTEGRATION_COMPLETE.md  PHASE_B_INTEGRATION_SUMMARY.md  PRIORITY_1_IMPLEMENTATION_COMPLETE.md  PRIORITY_2_IMPLEMENTATION_COMPLETE.md  PRIORITY_4_POLISHED_COMPLETE.md  PRIORITY_5_IMPLEMENTATION_COMPLETE.md  PRIORITY_6_IMPLEMENTATION_COMPLETE.md  PRIORITY_7_IMPLEMENTATION_COMPLETE.md  PROFILE_SYSTEM.md  QUICK_REFERENCE.md  README_FAANG_GRADE_UPDATE.md  (+9 more)
docs/development/: FIXES_IMPLEMENTED.md  METADATA_FEATURE_EVALUATION.md  PDF_GENERATION_PIPELINE_INTERNAL.md  PROFILE_SYSTEM_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  pdf-solid-evaluation.md  pdf-solid-implementation.md  structurizr-installation-summary.md  structurizr-production-ready.md  structurizr-solid-evaluation.md  structurizr-summary.md  structurizr-test-results.md
docs/examples/: advanced-markdown-showcase.md  architecture-overview.md  docs-pipeline-profiles-demo.yaml  mermaid-test-suite.md  product-requirements-doc.md  resume-template.md  sample-architecture.dsl  sample-technical-specification.md  technical-white-paper.md
docs_pipeline/: __init__.py  cli.py  config.py  runner.py
glossaries/: business.yaml  technical.yaml
pdf/: .gitignore  README.md  convert_final.py  crossref-config-example.yaml  custom.css.example  custom.css.playwright  glossary-example.yaml  layout.css  md2pdf.py  md_to_html_simple.py  md_to_html_with_diagrams.py  pdf-config.example.json  pdf-config.json  pdf-config.json.example  pdf-mermaid-theme.json  profiles.py  requirements-pdf.txt
pdf/docs/: CHANGELOG-v2.0.md  CRITICAL_FIXES_IMPLEMENTED.md  DIAGRAM_SCALING_ANALYSIS.md  ENHANCED_MEASUREMENT_REPORT.md  FEATURE_ANALYSIS.md  MERMAID_PROFESSIONAL_STANDARDS.md  PDF_GENERATION_SETUP.md  PDF_LAYOUT_ANALYSIS.md  PIPELINE_ANALYSIS.md  PLAYWRIGHT_SETUP.md  README_PDF_GENERATION.md  STYLING_GUIDE.md
pdf/playwright_pdf/: README.md  __init__.py  browser.py  cli.py  dom_analyzer.py  layout_model.py  layout_transformer.py  pdf_renderer.py  pipeline.py  postprocess.py  styles.py
pdf/tests/: arch_overview.mmd  compare_mermaid_optimization.py  failure_detection_test.md  layout_docs.yaml  multi_diagram_test.md  test_failure_detection_specific.py  test_page_size_measurement.py  test_reporting_manager_layout.py  test_reporting_manager_proposal_scaling.py  test_scaling_validation.py  verify_pdf_diagrams.py
prompts/: QUICKSTART.md  README.md  __init__.py  cli.py  orchestrator.py  requirements.txt
prompts/agents/: __init__.py  base.py  content_enhancer.py  (+2 more)
scripts/: create_profile_screenshots.py  generate-examples.sh  start-demo.bat  start-demo.sh
structurizr/: CHANGELOG.md  CODE_REVIEW_IMPROVEMENTS.md  FINAL_SUMMARY.md  INSTALLATION_SUMMARY.md  README.md  TEST_RESULTS.md  reporting-manager-config.json  requirements-structurizr.txt  structurizr-config.example.json  structurizr-config.json.example  structurizr.bat  structurizr.py  structurizr.sh
templates/: HTML_TEMPLATE_MERMAID11.html  index.html  mermaid_template.html
uploads/: README.md
(+170 files in other folders)
