[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-pipeline"
version = "1.0.0"
description = "Professional documentation tooling for AI-assisted technical writing"
authors = [{name = "Matt Jeffcoat", email = "matt.jeffcoat@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["documentation", "pdf", "mermaid", "ai", "architecture", "diagrams"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
pdf = [
    "playwright>=1.40.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
]
structurizr = [
    "docker>=6.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mjdevaccount/docs-pipeline"
Issues = "https://github.com/mjdevaccount/docs-pipeline/issues"
Documentation = "https://github.com/mjdevaccount/docs-pipeline#readme"

[tool.setuptools]
packages = ["docs_pipeline", "pdf", "prompts", "structurizr"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

